fix: horizontal align for mobile copyright floor

--- a/src/blocks/Footer/components/CopyrightFloor/CopyrightFloor.scss
+++ b/src/blocks/Footer/components/CopyrightFloor/CopyrightFloor.scss
@@ -136,57 +136,115 @@ $block: '.#{$ns}footer-block';
 
     @media (max-width: map-get($gridBreakpoints, 'md')) {
         &__links-floor-inner {
-            flex-wrap: wrap;
-            gap: $indentM;
+            flex-flow: column;
+            gap: 0;
+        }
+
+        &__links-floor-inner_threeColumn {
+            #{$block}__logo,
+            #{$block}__links-floor-center,
+            #{$block}__links-floor-right {
+                flex: none;
+                max-width: none;
+            }
         }
 
         &__links-floor-left,
+        &__links-floor-center,
         &__links-floor-right {
             width: 100%;
         }
 
-        &__links-floor-list {
-            flex-direction: column;
+        &__links-floor-left,
+        &__links-floor-center {
+            margin-bottom: $indentXS;
         }
 
-        &__links-floor-inner {
-            flex-flow: column wrap;
-            align-items: center;
+        &__links-floor-list {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        &__links-floor-right {
+            flex-direction: column;
+            height: auto;
+            gap: $indentXXXS;
+        }
+
+        &__links-floor-inner:has(#{$block}__logo) {
+            #{$block}__links-floor-left,
+            #{$block}__links-floor-center {
+                order: 1;
+            }
+
+            #{$block}__logo {
+                order: 2;
+            }
+
+            #{$block}__links-floor-right {
+                order: 3;
+                margin-top: $indentXXXS;
+            }
         }
 
         &__links-floor-inner_mobileHorizontalAlignment_left {
-            #{$block}__links-floor-left {
-                justify-content: flex-start;
-            }
+            align-items: flex-start;
 
-            #{$block}__links-floor-item {
-                padding: 0;
+            #{$block}__links-floor-left,
+            #{$block}__links-floor-center {
+                justify-content: flex-start;
             }
 
             #{$block}__links-floor-list {
                 align-items: flex-start;
             }
 
-            #{$block}__logo {
-                align-self: flex-start;
-            }
-
             #{$block}__links-floor-copyright {
                 width: 100%;
+                text-align: left;
             }
 
             #{$block}__links-floor-right {
                 align-items: flex-start;
             }
+
+            .pc-lang-switcher__switcher-button {
+                margin-left: -12px;
+            }
         }
 
-        &__links-floor-inner_mobileHorizontalAlignment_center &__logo {
-            align-self: center;
-        }
+        &__links-floor-inner_mobileHorizontalAlignment_center {
+            align-items: center;
 
-        &__links-floor-right {
-            flex-direction: column;
-            height: auto;
+            #{$block}__links-floor-left,
+            #{$block}__links-floor-center {
+                justify-content: center;
+            }
+
+            #{$block}__links-floor-list {
+                align-items: center;
+            }
+
+            #{$block}__links-floor-copyright {
+                width: 100%;
+                text-align: center;
+            }
+
+            #{$block}__links-floor-right {
+                align-items: center;
+            }
+
+            #{$block}__logo {
+                align-self: center;
+            }
+
+            .pc-lang-switcher {
+                width: auto;
+            }
+
+            .pc-lang-switcher__switcher-button {
+                margin-left: 0;
+            }
         }
     }
 
